tests/fail-preinc_predec1.art
// check preinc, predec

int main()
{
	int x = 10;

	++x; // ok
	--x; // ok

	//++15; // error
	--15; // error
	//++<10.5, 6.6>; // error
}